0.9.1 Bug fixes for Android (keyboard, keyboard covering input)

--- a/private/styles/main.css
+++ b/private/styles/main.css
@@ -122,7 +122,7 @@ pre {
 .fullscreenFix {
     position: fixed;
     overflow: scroll;
-    max-height: 60vh;
+    max-height: 50vh;
 }
 
 #hiddenInput {
